// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BalanceCard it renders correctly 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  border: 1px solid var(--black);
}

.c1 hr {
  border-color: var(--black);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 .title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: var(--font-size-l);
  margin-bottom: 1em;
}

.c2 .title h3 {
  margin: 0;
}

.c2 .title .toggle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  font-size: 1rem;
}

.c2 .title .toggle span {
  color: var(--gray-dark);
}

.c2 .title .toggle span.active {
  color: var(--black);
}

.c2 .title .toggle span:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 hr {
  margin: 0;
}

.c2 .balance {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

<div
  class="c0 c1 c2"
>
  <div>
    <div
      class="title"
    >
      <h3>
        Balance
      </h3>
      <div
        class="toggle"
      >
        <span
          class="active"
        >
          Approx.
        </span>
        <span
          class=""
        >
          Exact
        </span>
      </div>
    </div>
    <hr />
  </div>
  <p
    class="balance"
  >
    100
     FIL
  </p>
  <button
    class="c3"
  >
    Send
  </button>
</div>
`;

exports[`BalanceCard it renders precise when the user clicks "precise" 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  border: 1px solid var(--black);
}

.c1 hr {
  border-color: var(--black);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 .title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: var(--font-size-l);
  margin-bottom: 1em;
}

.c2 .title h3 {
  margin: 0;
}

.c2 .title .toggle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  font-size: 1rem;
}

.c2 .title .toggle span {
  color: var(--gray-dark);
}

.c2 .title .toggle span.active {
  color: var(--black);
}

.c2 .title .toggle span:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 hr {
  margin: 0;
}

.c2 .balance {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

<div
  class="c0 c1 c2"
>
  <div>
    <div
      class="title"
    >
      <h3>
        Balance
      </h3>
      <div
        class="toggle"
      >
        <span
          class=""
        >
          Approx.
        </span>
        <span
          class="active"
        >
          Exact
        </span>
      </div>
    </div>
    <hr />
  </div>
  <p
    class="balance"
  >
    23488219.00001
     FIL
  </p>
  <button
    class="c3"
  >
    Send
  </button>
</div>
`;

exports[`BalanceCard it renders pretty billion dollar balances 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  border: 1px solid var(--black);
}

.c1 hr {
  border-color: var(--black);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 .title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: var(--font-size-l);
  margin-bottom: 1em;
}

.c2 .title h3 {
  margin: 0;
}

.c2 .title .toggle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  font-size: 1rem;
}

.c2 .title .toggle span {
  color: var(--gray-dark);
}

.c2 .title .toggle span.active {
  color: var(--black);
}

.c2 .title .toggle span:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 hr {
  margin: 0;
}

.c2 .balance {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

<div
  class="c0 c1 c2"
>
  <div>
    <div
      class="title"
    >
      <h3>
        Balance
      </h3>
      <div
        class="toggle"
      >
        <span
          class="active"
        >
          Approx.
        </span>
        <span
          class=""
        >
          Exact
        </span>
      </div>
    </div>
    <hr />
  </div>
  <p
    class="balance"
  >
    10.023B
     FIL
  </p>
  <button
    class="c3"
  >
    Send
  </button>
</div>
`;

exports[`BalanceCard it renders pretty million dollar balances 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  border: 1px solid var(--black);
}

.c1 hr {
  border-color: var(--black);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 .title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: var(--font-size-l);
  margin-bottom: 1em;
}

.c2 .title h3 {
  margin: 0;
}

.c2 .title .toggle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  font-size: 1rem;
}

.c2 .title .toggle span {
  color: var(--gray-dark);
}

.c2 .title .toggle span.active {
  color: var(--black);
}

.c2 .title .toggle span:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 hr {
  margin: 0;
}

.c2 .balance {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

<div
  class="c0 c1 c2"
>
  <div>
    <div
      class="title"
    >
      <h3>
        Balance
      </h3>
      <div
        class="toggle"
      >
        <span
          class="active"
        >
          Approx.
        </span>
        <span
          class=""
        >
          Exact
        </span>
      </div>
    </div>
    <hr />
  </div>
  <p
    class="balance"
  >
    10.022M
     FIL
  </p>
  <button
    class="c3"
  >
    Send
  </button>
</div>
`;

exports[`BalanceCard it renders pretty thousand dollar balances 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  border: 1px solid var(--black);
}

.c1 hr {
  border-color: var(--black);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 .title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: var(--font-size-l);
  margin-bottom: 1em;
}

.c2 .title h3 {
  margin: 0;
}

.c2 .title .toggle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  font-size: 1rem;
}

.c2 .title .toggle span {
  color: var(--gray-dark);
}

.c2 .title .toggle span.active {
  color: var(--black);
}

.c2 .title .toggle span:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 hr {
  margin: 0;
}

.c2 .balance {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

<div
  class="c0 c1 c2"
>
  <div>
    <div
      class="title"
    >
      <h3>
        Balance
      </h3>
      <div
        class="toggle"
      >
        <span
          class="active"
        >
          Approx.
        </span>
        <span
          class=""
        >
          Exact
        </span>
      </div>
    </div>
    <hr />
  </div>
  <p
    class="balance"
  >
    10.021K
     FIL
  </p>
  <button
    class="c3"
  >
    Send
  </button>
</div>
`;

exports[`BalanceCard it renders pretty under 1 dollar balances 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  border: 1px solid var(--black);
}

.c1 hr {
  border-color: var(--black);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 .title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: var(--font-size-l);
  margin-bottom: 1em;
}

.c2 .title h3 {
  margin: 0;
}

.c2 .title .toggle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  font-size: 1rem;
}

.c2 .title .toggle span {
  color: var(--gray-dark);
}

.c2 .title .toggle span.active {
  color: var(--black);
}

.c2 .title .toggle span:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 hr {
  margin: 0;
}

.c2 .balance {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

<div
  class="c0 c1 c2"
>
  <div>
    <div
      class="title"
    >
      <h3>
        Balance
      </h3>
      <div
        class="toggle"
      >
        <span
          class="active"
        >
          Approx.
        </span>
        <span
          class=""
        >
          Exact
        </span>
      </div>
    </div>
    <hr />
  </div>
  <p
    class="balance"
  >
    &lt; 0.001
     FIL
  </p>
  <button
    class="c3"
  >
    Send
  </button>
</div>
`;

exports[`BalanceCard it renders pretty under thousand dollar balances 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  border: 1px solid var(--black);
}

.c1 hr {
  border-color: var(--black);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 .title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: var(--font-size-l);
  margin-bottom: 1em;
}

.c2 .title h3 {
  margin: 0;
}

.c2 .title .toggle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  font-size: 1rem;
}

.c2 .title .toggle span {
  color: var(--gray-dark);
}

.c2 .title .toggle span.active {
  color: var(--black);
}

.c2 .title .toggle span:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 hr {
  margin: 0;
}

.c2 .balance {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

<div
  class="c0 c1 c2"
>
  <div>
    <div
      class="title"
    >
      <h3>
        Balance
      </h3>
      <div
        class="toggle"
      >
        <span
          class="active"
        >
          Approx.
        </span>
        <span
          class=""
        >
          Exact
        </span>
      </div>
    </div>
    <hr />
  </div>
  <p
    class="balance"
  >
    999.124
     FIL
  </p>
  <button
    class="c3"
  >
    Send
  </button>
</div>
`;

exports[`BalanceCard renders the story 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  white-space: nowrap;
  cursor: pointer;
  gap: 0.75rem;
  padding: 0.5em 0.75em;
  color: var(--black);
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  border-color: var(--black);
  background: transparent;
  color: var(--white);
  border-color: var(--green-medium);
  background: var(--green-medium);
}

.c3 svg path {
  stroke: var(--black);
}

.c3:hover {
  color: var(--purple-medium);
  border-color: var(--purple-medium);
}

.c3:hover svg path {
  stroke: var(--purple-medium);
}

.c3:active {
  color: var(--white) !important;
  border-color: var(--purple-medium) !important;
  background: var(--purple-medium) !important;
}

.c3:active svg path {
  stroke: var(--white) !important;
}

.c3 svg path {
  stroke: var(--white);
}

.c3:hover {
  color: var(--green-medium);
  border-color: var(--green-medium);
  background: var(--white);
}

.c3:hover svg path {
  stroke: var(--green-medium);
}

.c0 {
  padding: 1.5em;
  border-radius: 8px;
  overflow: hidden;
  text-align: center;
  word-break: break-word;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c0 > svg:first-child {
  display: block;
  margin: 0 auto 1em;
}

.c0 > h2:first-child {
  margin: 0;
}

.c0 header:first-child {
  margin: -1.5em -1.5em 1.5em -1.5em;
  padding: 1.5em;
  background-color: var(--purple-medium);
  color: var(--white);
}

.c1 {
  border: 1px solid var(--black);
}

.c1 hr {
  border-color: var(--black);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 18em;
  height: 18em;
}

.c2 .title {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: var(--font-size-l);
  margin-bottom: 1em;
}

.c2 .title h3 {
  margin: 0;
}

.c2 .title .toggle {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  font-size: 1rem;
}

.c2 .title .toggle span {
  color: var(--gray-dark);
}

.c2 .title .toggle span.active {
  color: var(--black);
}

.c2 .title .toggle span:hover {
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 hr {
  margin: 0;
}

.c2 .balance {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

<div
  class="c0 c1 c2"
>
  <div>
    <div
      class="title"
    >
      <h3>
        Balance
      </h3>
      <div
        class="toggle"
      >
        <span
          class="active"
        >
          Approx.
        </span>
        <span
          class=""
        >
          Exact
        </span>
      </div>
    </div>
    <hr />
  </div>
  <p
    class="balance"
  >
    100
     FIL
  </p>
  <button
    class="c3"
  >
    Send
  </button>
</div>
`;
